secondfile/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Previously__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Previously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Begin Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blog_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User is allowed to create and edit Blog records</inlineHelpText>
        <label>Blog Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Application_Freeze__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bypass Application Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSP_User_Provisioning_Status__c</fullName>
        <label>CSP User Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Role__c</fullName>
        <formula>Contact.Community_Role_Formula__c</formula>
        <label>Community Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Modify_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create/Modify Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directory_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users will be able to edit the directory records if this field is checked</description>
        <label>Directory Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <formula>Email</formula>
        <label>EmailId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDF_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDF - Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_MDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDF - Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Exchange_User_Name__c</fullName>
        <formula>Contact.Partner_Exchange_User_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Exchange User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_Notification_IDs__c</fullName>
        <description>This field hold the id of the notification records which have been ready by that particular user</description>
        <label>Read Notification IDs :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seen_Notification_IDs__c</fullName>
        <label>Seen Notification IDs :</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Assurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Assurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Birch__c</fullName>
        <formula>Contact.Account.Stop_Birch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stop Birch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temppassword__c</fullName>
        <description>For storing temporary SSO Password</description>
        <label>Temp Password</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License_Type__c</fullName>
        <formula>IF(ISPICKVAL(UserType,&quot;CsnOnly&quot;),&quot;Chatter&quot;,NULL)+ 
IF(ISPICKVAL(UserType,&quot;CspLitePortal&quot;),&quot;Customer&quot;,NULL)+ 
IF(ISPICKVAL(UserType,&quot;PowerPartner&quot;),&quot;Partner&quot;,NULL)+ 
IF(ISPICKVAL(UserType,&quot;Standard&quot;),&quot;Salesforce&quot;,NULL)+ 
IF(ISPICKVAL(UserType,&quot;Guest&quot;),&quot;Guest&quot;,NULL)</formula>
        <label>User License Type</label>
        <type>Text</type>
    </fields>
</CustomObject>